<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Paranoid FaceSense</string>
    <string name="attr_blur">Face is too blurry</string>
    <string name="attr_eye_close">Keep both eyes open</string>
    <string name="attr_eye_occlusion">Only partial face detected</string>
    <string name="attr_light_dark">Face needs more light</string>
    <string name="attr_light_high">Face has too much light</string>
    <string name="attr_light_shadow">Face has too many shadows</string>
    <string name="attr_mouth_occlusion">Only partial face detected</string>
    <string name="btn_try">Try Again</string>
    <string name="btn_try_cancel">@android:string/cancel</string>
    <string name="face_enrolling">Face unlock enroll</string>
    <string name="face_enrolling_description">Be sure to capture your face in a well lit environment</string>
    <string name="face_enrolling_title">Hold the phone still. Look directly into the camera.</string>
    <string name="face_try_again_tip">Face scan has failed. Be sure you\'re well lit and looking at the camera.</string>
    <string name="face_try_again_title">Something went wrong</string>
    <string name="perm_required_alert_button_app_info">App Info</string>
    <string name="perm_required_alert_msg">Face unlock needs permission to access some things on your device. Select \"Permissions\" in App info to enable.</string>
    <string name="perm_required_alert_title">Permissions required</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="sudFontSecondary">google-sans</string>
    <string name="sudFontSecondaryMedium">google-sans-medium</string>
    <string name="sud_back_button_label">Back</string>
    <string name="sud_more_button_label">More</string>
    <string name="sud_next_button_label">Next</string>
    <string name="suwFontSecondary">google-sans</string>
    <string name="suwFontSecondaryMedium">google-sans-medium</string>
    <string name="suw_back_button_label">Back</string>
    <string name="suw_more_button_label">More</string>
    <string name="suw_next_button_label">Next</string>
    <string name="txt_camera_success">Face Registered</string>
    <string name="txt_camera_success_down">Look directly at camera</string>
    <string name="txt_camera_success_left">Look directly at camera</string>
    <string name="txt_camera_success_right">Look directly at camera</string>
    <string name="txt_camera_success_top">Look directly at camera</string>
    <string name="unlock_failed">Internal error</string>
    <string name="unlock_failed_face_blur">Face is too blurry</string>
    <string name="unlock_failed_face_large">Face is too close</string>
    <string name="unlock_failed_face_multi">Too many faces detected</string>
    <string name="unlock_failed_face_not_complete">Only partial face detected</string>
    <string name="unlock_failed_face_not_found">Detecting</string>
    <string name="unlock_failed_face_small">Face is too far away</string>
    <string name="unlock_failed_offset_bottom">Look directly at camera</string>
    <string name="unlock_failed_offset_left">Look directly at camera</string>
    <string name="unlock_failed_offset_right">Look directly at camera</string>
    <string name="unlock_failed_offset_top">Look directly at camera</string>
    <string name="unlock_failed_quality">Only partial face detected</string>
    <string name="unlock_failed_warning">Detecting</string>
</resources>
