<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:id="@+id/sv_root" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="@dimen/page_padding_left" android:paddingEnd="@dimen/page_padding_right">
            <ImageView android:id="@+id/iv_top_icon" android:layout_width="@dimen/setup_top_icon_size" android:layout_height="@dimen/setup_top_icon_size" android:layout_marginTop="@dimen/top_icon_margin_top" android:src="@drawable/ic_face_auth" android:tint="@color/theme_color" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
            <TextView android:textSize="@dimen/setup_header_text_size" android:textColor="?android:attr/textColorPrimary" android:id="@+id/tv_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setup_header_margin_top" android:text="@string/face_try_again_title" android:layout_below="@+id/iv_top_icon" android:layout_centerHorizontal="true" android:fontFamily="sans-serif"/>
            <TextView android:textSize="@dimen/setup_body_text_size" android:textColor="?android:attr/textColorSecondary" android:id="@+id/tv_summary" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setup_summary_margin_top" android:text="@string/face_try_again_tip" android:layout_below="@+id/tv_header" android:fontFamily="sans-serif"/>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout android:paddingTop="5dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/page_padding_left" android:paddingEnd="@dimen/page_padding_right">
        <Button android:id="@+id/face_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_try_cancel" style="@style/SuwGlifButton.Secondary"/>
        <Space android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <Button android:id="@+id/face_try" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_try" style="@style/SuwGlifButton.Primary"/>
    </LinearLayout>
</LinearLayout>
